frontend: components: add seperate component to display env variables

--- a/frontend/src/i18n/locales/de/translation.json
+++ b/frontend/src/i18n/locales/de/translation.json
@@ -294,6 +294,9 @@
   "Are you sure?": "Sind Sie sicher?",
   "This will discard your changes in the editor. Do you want to proceed?": "Dadurch werden Ihre Änderungen im Editor verworfen. Möchten Sie fortfahren?",
   "Undo Changes": "Änderungen rückgängig machen",
+  "Show all environment variables (+{{count}} more)_one": "",
+  "Show all environment variables (+{{count}} more)_other": "",
+  "Show fewer": "",
   "No label selectors found for this {{type}}": "",
   "Invalid response from server": "",
   "Failed to fetch related pods": "",
@@ -320,7 +323,6 @@
   "Controlled by": "Gesteuert von",
   "Show all labels (+{{count}} more)_one": "",
   "Show all labels (+{{count}} more)_other": "",
-  "Show fewer": "",
   "Start port forward": "Portweiterleitung starten",
   "Forward port": "Port weiterleiten",
   "Delete port forward": "Portweiterleitung löschen",
