--- a/frontend/src/i18n/locales/fr/translation.json
+++ b/frontend/src/i18n/locales/fr/translation.json
@@ -295,6 +295,10 @@
   "Are you sure?": "Êtes-vous sûr ?",
   "This will discard your changes in the editor. Do you want to proceed?": "Vos modifications seront perdues. Voulez-vous continuer ?",
   "Undo Changes": "Annuler les modifications",
+  "Show all environment variables (+{{count}} more)_one": "",
+  "Show all environment variables (+{{count}} more)_many": "",
+  "Show all environment variables (+{{count}} more)_other": "",
+  "Show fewer": "",
   "No label selectors found for this {{type}}": "",
   "Invalid response from server": "",
   "Failed to fetch related pods": "",
@@ -322,7 +326,6 @@
   "Show all labels (+{{count}} more)_one": "",
   "Show all labels (+{{count}} more)_many": "",
   "Show all labels (+{{count}} more)_other": "",
-  "Show fewer": "",
   "Start port forward": "Démarrer le transfert de port",
   "Forward port": "Transférer le port",
   "Delete port forward": "Supprimer le transfert de port",
