--- a/frontend/src/i18n/locales/pt/translation.json
+++ b/frontend/src/i18n/locales/pt/translation.json
@@ -295,6 +295,10 @@
   "Are you sure?": "Tem a certeza?",
   "This will discard your changes in the editor. Do you want to proceed?": "Irá descartar as suas modificações no editor. Deseja prosseguir?",
   "Undo Changes": "Desfazer modificações",
+  "Show all environment variables (+{{count}} more)_one": "",
+  "Show all environment variables (+{{count}} more)_many": "",
+  "Show all environment variables (+{{count}} more)_other": "",
+  "Show fewer": "",
   "No label selectors found for this {{type}}": "Nenhum selector de etiquetas encontrado para este {{type}}",
   "Invalid response from server": "Resposta inválida do servidor",
   "Failed to fetch related pods": "Falha ao obter pods relacionados",
@@ -322,7 +326,6 @@
   "Show all labels (+{{count}} more)_one": "",
   "Show all labels (+{{count}} more)_many": "",
   "Show all labels (+{{count}} more)_other": "",
-  "Show fewer": "",
   "Start port forward": "Iniciar redir. de porta",
   "Forward port": "Redir. porta",
   "Delete port forward": "Eliminar redir. de porta",
