--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -294,6 +294,9 @@
   "Are you sure?": "Are you sure?",
   "This will discard your changes in the editor. Do you want to proceed?": "This will discard your changes in the editor. Do you want to proceed?",
   "Undo Changes": "Undo Changes",
+  "Show all environment variables (+{{count}} more)_one": "Show all environment variables (+{{count}} more)",
+  "Show all environment variables (+{{count}} more)_other": "Show all environment variables (+{{count}} more)",
+  "Show fewer": "Show fewer",
   "No label selectors found for this {{type}}": "No label selectors found for this {{type}}",
   "Invalid response from server": "Invalid response from server",
   "Failed to fetch related pods": "Failed to fetch related pods",
@@ -320,7 +323,6 @@
   "Controlled by": "Controlled by",
   "Show all labels (+{{count}} more)_one": "Show all labels (+{{count}} more)",
   "Show all labels (+{{count}} more)_other": "Show all labels (+{{count}} more)",
-  "Show fewer": "Show fewer",
   "Start port forward": "Start port forward",
   "Forward port": "Forward port",
   "Delete port forward": "Delete port forward",
