--- a/frontend/src/i18n/locales/ja/translation.json
+++ b/frontend/src/i18n/locales/ja/translation.json
@@ -293,6 +293,8 @@
   "Are you sure?": "よろしいですか？",
   "This will discard your changes in the editor. Do you want to proceed?": "エディターでの変更が破棄されます。続行しますか？",
   "Undo Changes": "変更を元に戻す",
+  "Show all environment variables (+{{count}} more)_other": "",
+  "Show fewer": "",
   "No label selectors found for this {{type}}": "この {{type}} のラベルセレクターが見つかりません",
   "Invalid response from server": "サーバーからの無効な応答",
   "Failed to fetch related pods": "関連するポッドの取得に失敗しました",
@@ -318,7 +320,6 @@
   "Owner refs": "オーナー参照",
   "Controlled by": "制御者",
   "Show all labels (+{{count}} more)_other": "",
-  "Show fewer": "",
   "Start port forward": "ポートフォワードを開始",
   "Forward port": "ポートを転送",
   "Delete port forward": "ポートフォワードを削除",
